--- a/网络是怎样连接的/1. 浏览器生成消息.md
+++ b/网络是怎样连接的/1. 浏览器生成消息.md
@@ -63,3 +63,30 @@ http://user:password@www.glasscom.com:80/dir/file1.html
 
 ## 向DNS服务器查询web服务器的IP地址
 在浏览器生成http消息之后， 要先根据域名查询到ip地址，在委托操作系统发送消息
+
+### ip地址的基本知识
+### tcp/ip 的基本思路
+由一些小的子网，通过路由器连接起来组成一个大的网络， 这里的子网可以理解成为用集线器连接起来的几台计算机，我们将它看作一个单位，成为子网，将子网通过路由器连接起来，就形成了一个网络
+
+很多家用路由器内置了集线器功能，因为大家可以理解为这种路由器内部同时包换路由器和集线器两种设备，他们在里面已经已经连接起来了
+
+### ip地址结构解析
+一个ip地址代表由32bit组成， 分为网络号和主机号，网络号为子网位置， 主机号为子网中的机器位置，
+如何区分主机号和网络号呢？需要用到子网掩码
+
+子网掩码左边是1， 右边是0 ， 所有的位与ip地址进行 `&` 操作，子网掩码为1的位对应网络号，子网掩码为0的位对应主机号
+
+主机号部分全部为0代表整个子网
+主机号部分全部为1代表向子网上所有设备发送包
+
+### 域名和ip地址并用的理由
+ip32位更有效率
+域名方便人使用
+折中机制DNS
+
+### socket库提供查询ip地址的功能
+查询ip地址，只要询问最近的DNS服务器"www.baidu.com"的ip地址是什么就可以了，dns会回答说该服务器的地址为“123.234.123.23”
+
+- 计算机上有响应的DNS客服端， 称为DNS解析器， 负责通过DNS查询IP地址
+- socket库是用于调用网络功能的程序组件集合，可以让其他的应用程序调用操作系统的网络功能， 解析器就是其中的一种程序组件
+
