--- a/网络是怎样连接的/1. 浏览器生成消息.md
+++ b/网络是怎样连接的/1. 浏览器生成消息.md
@@ -89,4 +89,9 @@ ip32位更有效率
 
 - 计算机上有响应的DNS客服端， 称为DNS解析器， 负责通过DNS查询IP地址
 - socket库是用于调用网络功能的程序组件集合，可以让其他的应用程序调用操作系统的网络功能， 解析器就是其中的一种程序组件
+- socket在调用操作系统内部的协议栈
+- 协议栈在调用网卡在到DNS服务器
 
+
+## 引申
+- DNS的解析机制看到程序在做一件事的时候， 通过层层递进的组件（函数）来进行功能细化， 不同的函数有不同的功能， 不同的事交给不同的函数去做， 以及函数功能实现功能界定 以及整体可能的处理流程， 会影响如何做这个函数
